# duty

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: _helpers.tpl  configmap.yaml  deployment.yml  postgres-service.yml  postgres-statefulset.yml
duty_bot/: __main__.py
duty_bot/app/: app.py
duty_bot/database/: database_migration.py  database_utils.py
duty_bot/templates/: duty_configmap.py  messages.py
media/: demo.mov
